--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Quicksand:wght@300..700&family=Saira:ital,wght@0,100..900;1,100..900&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  color: #ffffff;
+}
+
+.shadow-img {
+  filter: drop-shadow(
+    0px 6px 10px rgba(255, 255, 255, 0.9)
+  ); /* Sesuaikan nilai bayangan yang diinginkan di sini */
+}
